[package]
author = "William Westlake"
description = "Rusty MUD Server Admin CLI"
name = "rusty-mud-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive", "yaml"] }
