[package]
name = "rusty-mud-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
regex = "1.5.6"
pwhash = "1.0.0"
yaml-rust = "0.4"
directories = "4.0.1"
zxcvbn = "2.2.1"
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]}
reindeer = "0.1.2"
handlebars = "4.3.1"
rand = "0.8.5"
bufstream = "0.1"
