[package]
author = "William Westlake"
description = "Rusty MUD Server"
name = "rusty-mud-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-mud-common = { path = "../rusty-mud-common" }
clap = { version = "3.2.8", features = ["derive", "yaml"] }